dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: ExternalName
  externalName: my.database.example.com
  selector:
    app: myapp
  ports:
  - port: 80
    protocol: TCP
    targetPort: 4200
